# JobHuntingBackend

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  STATUS.md  pyproject.toml  requirements.txt
src/: __init__.py
src/job_hunting/: bootstrap.py  config.py  logging_config.py  views.py
src/job_hunting/adapters/: __init__.py  orm.py  repository.py  scraper.py
src/job_hunting/domain/: __init__.py  commands.py  model.py
src/job_hunting/entrypoints/: api.py
src/job_hunting/service_layer/: handlers.py  message_bus.py  unit_of_work.py
tests/: test_examples.py
